tests/ui/parser/issues/issue-89574.stderr
error: missing type for `const` item
  --> $DIR/issue-89574.rs:2:22
   |
LL |     const EMPTY_ARRAY = [];
   |                      ^ help: provide a type for the item: `: <type>`

error: aborting due to previous error

